--- a/best-practices-micro/src/styles/index.scss
+++ b/best-practices-micro/src/styles/index.scss
@@ -1,156 +1,4 @@
-.categories {
-  &-swiper {
-    // width: 100%;
-    // height: 100%;
-
-    &-slide {
-      width: auto;
-
-      &-card {
-        display: flex;
-        flex-direction: column;
-        gap: 24px;
-        text-align: center;
-        padding-bottom: 40px;
-
-        &-header {
-          width: 180px;
-          height: 180px;
-          background: rgba(0, 0, 0, 0.04);
-          border-radius: 50%;
-          transition: border-radius 0.7s;
-
-          &-image {
-            width: 130px;
-            height: 130px;
-            margin: 25px auto;
-            user-select: none;
-            cursor: pointer;
-          }
-        }
-
-        &-title {
-          font-size: 18px;
-          font-weight: 700;
-          line-height: 24px;
-          cursor: default;
-          user-select: none;
-        }
-      }
-    }
-
-    .swiper-slide-active {
-      .categories-swiper-slide-card-header {
-        border-radius: 5%;
-      }
-    }
-  }
-}
-
-.menu {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  width: 600px;
-  max-width: 100%;
-  margin: auto;
-
-  &-category {
-    padding: 10px;
-
-    &-seperator {
-      height: 12px;
-      display: block;
-      background-image: linear-gradient(
-        360deg,
-        rgba(0, 0, 0, 0.0001) 0,
-        rgba(0, 0, 0, 0.08) 88%,
-        rgba(0, 0, 0, 0.16) 100%
-      );
-
-      -webkit-mask-image: linear-gradient(
-        90deg,
-        rgba(255, 255, 255, 0.0001) 4.3%,
-        #000 50%,
-        rgba(255, 255, 255, 0.0001) 95.7%
-      );
-    }
-
-    &-title {
-      font-size: 18px;
-      font-weight: 700;
-      line-height: 24px;
-      margin-bottom: 10px;
-    }
-
-    &-foods {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-
-      &-food {
-        display: flex;
-        // border: 1px solid #f5f5f5;
-        background-color: #f7f7f7;
-
-        &-image {
-          width: 150px !important;
-          min-width: 150px !important;
-          height: 150px;
-        }
-
-        &-content {
-          display: flex;
-          flex-direction: column;
-          gap: 4px;
-          width: 100%;
-          padding: 12px 8px !important;
-          position: relative;
-
-          &-title {
-            font-size: 14px !important;
-            font-weight: 400 !important;
-          }
-
-          &-description {
-            font-size: 12px !important;
-            color: rgb(15, 17, 17) !important;
-            font-weight: 300 !important;
-          }
-
-          &-price {
-            display: flex;
-            flex-direction: row;
-            gap: 0px;
-
-            span {
-              font-size: 13px !important;
-              font-weight: 400 !important;
-            }
-
-            b {
-              font-size: 22px !important;
-              font-weight: 400 !important;
-              line-height: 22px;
-            }
-          }
-
-          &-actions {
-            position: absolute;
-            bottom: 0px;
-            right: 0px;
-            padding: 0px !important;
-          }
-        }
-      }
-    }
-  }
-}
-
-.food-categories {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
-  width: 400px;
+body {
+  margin: 0px !important;
+  padding: 0px !important;
 }
